@@ -333,6 +333,18 @@ and run on that version of Linux.</p>
 <td><a href="oracle/linux/fedoracore/12/11g.html">Yes</a></td>
 </tr>
 <tr>
+<th>Fedora Core 13</th>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td><a href="oracle/linux/fedoracore/13/11g.html">Yes</a></td>
+</tr>
+<tr>
 <th>Suse 9.0</th>
 <td>No</td>
 <td>No</td>
